--- a/TabPassValue/Base.lproj/Main.storyboard
+++ b/TabPassValue/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="U4H-H5-V9U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="U4H-H5-V9U">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
@@ -69,6 +69,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="pR2-lD-2dd"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" id="FYf-yq-ugv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dsI-F5-fyS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -184,9 +187,20 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xvi-Gr-j6d">
+                                <rect key="frame" x="167" y="213" width="266" height="30"/>
+                                <state key="normal" title="Pop the VC,and pass value to RootVC.">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="popBtnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DKq-L8-ejO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="centerX" secondItem="Xvi-Gr-j6d" secondAttribute="centerX" id="8Mi-9b-9E9"/>
+                            <constraint firstAttribute="centerY" secondItem="Xvi-Gr-j6d" secondAttribute="centerY" constant="72" id="EgX-NA-QhY"/>
                             <constraint firstAttribute="centerY" secondItem="QKO-PD-uoS" secondAttribute="centerY" constant="0.5" id="Zhi-tv-ykR"/>
                             <constraint firstAttribute="centerX" secondItem="QKO-PD-uoS" secondAttribute="centerX" constant="-0.5" id="bOT-uR-wDf"/>
                         </constraints>
